<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalmiddle"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintEnd_toEndOf="@+id/guidelineverticalLeft"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/texture_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalRight"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalmiddle" />


    <ImageView
        android:id="@+id/elips"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ellips"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalBottom"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalRight"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toStartOf="@+id/guidelineverticalLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalTop"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvRightAddressForShopping"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="8dp"
        android:text="@string/rightAddres"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="@+id/elips"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/elips"
        app:layout_constraintTop_toTopOf="@+id/elips" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="249dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:text="@string/qulity"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tvRightAddressForShopping"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvRightAddressForShopping"
        app:layout_constraintTop_toBottomOf="@+id/tvRightAddressForShopping" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        style="@style/blueButtonStyle"
        android:layout_width="@dimen/SmallButtonWidth"
        android:layout_height="@dimen/SmallButtonHeight"
        android:layout_marginEnd="140dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.379" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalmiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineverticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.86" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />


</androidx.constraintlayout.widget.ConstraintLayout>